fixed it so that it puts two fighting each other(can have multiple not sure if i should change that or not also made button visible when two fighting

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@
 
 
 #fight {
-    margin-left: 100px;
+    margin-left: 90px;
     background-color: black;
     color: red;
     line-height: 150%;
